RESOLVED FIXED162625
Some Now Playing behavior is broken after r206315
https://bugs.webkit.org/show_bug.cgi?id=162625
Summary Some Now Playing behavior is broken after r206315
Wenson Hsieh
Reported 2016-09-27 10:15:13 PDT
Some Now Playing behavior is broken after r206315
Attachments
Patch (2.52 KB, patch)
2016-09-27 10:21 PDT, Wenson Hsieh
no flags
Wenson Hsieh
Comment 1 2016-09-27 10:15:52 PDT
Wenson Hsieh
Comment 2 2016-09-27 10:21:22 PDT
WebKit Commit Bot
Comment 3 2016-09-27 10:57:09 PDT
Comment on attachment 289966 [details] Patch Clearing flags on attachment: 289966 Committed r206444: <http://trac.webkit.org/changeset/206444>
WebKit Commit Bot
Comment 4 2016-09-27 10:57:13 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.