Some Now Playing behavior is broken after r206315 https://bugs.webkit.org/show_bug.cgi?id=162625 <rdar://problem/28496755>

Reviewed by Jer Noble.

Reverts the part of our heuristic that disables Now Playing in active tabs in the main window.

* html/MediaElementSession.cpp:
(WebCore::MediaElementSession::pageAllowsNowPlayingControls):
* page/Page.cpp:
(WebCore::Page::setViewState):


Canonical link: https://commits.webkit.org/180560@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@206444 268f45cc-cd09-0410-ab3c-d52691b4dbfc