Source/WebCore/page/Page.cpp
@@ -1451,7 +1451,6 @@ void Page::setViewState(ViewState::Flags viewState)
 
     ViewState::Flags oldViewState = m_viewState;
 
-    bool wasVisibleAndActive = isVisibleAndActive();
     m_viewState = viewState;
 
     m_focusController->setViewState(viewState);
@@ -1468,9 +1467,6 @@ void Page::setViewState(ViewState::Flags viewState)
 
     for (auto* observer : m_viewStateChangeObservers)
         observer->viewStateDidChange(oldViewState, m_viewState);
-
-    if (wasVisibleAndActive != isVisibleAndActive())
-        PlatformMediaSessionManager::updateNowPlayingInfoIfNecessary();
 }
 
 bool Page::isVisibleAndActive() const
